coxswain/test/ill-typed/T0.hs
-- Smoke test for the test suite.

main :: IO ()
main = ()
